Fixed some overflow issues within the ArcContainer

--- a/src/themes/index.css
+++ b/src/themes/index.css
@@ -167,6 +167,11 @@
   --arc-brand-height: 1.25rem;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: var(--arc-font-body);
